--- a/BlazorMovie/MovieClient/Pages/BuyVip.razor.css
+++ b/BlazorMovie/MovieClient/Pages/BuyVip.razor.css
@@ -1,35 +1,34 @@
 ﻿body {
-    margin: 0;
-    font-size: .9rem;
-    font-weight: 400;
-    line-height: 1.6;
-    color: #212529;
-    text-align: left;
-    background-color: #ffffff;
+  margin: 0;
+  font-size: 0.9rem;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #212529;
+  text-align: left;
+  background-color: #ffffff;
 }
 
 .my-form,
 .login-form {
-    font-family: Raleway, sans-serif;
+  font-family: Raleway, sans-serif;
 }
 
 .my-form {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
-    .my-form .row {
-        margin-left: 0;
-        margin-right: 0;
-    }
+.my-form .row {
+  margin-left: 0;
+  margin-right: 0;
+}
 
 .login-form {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
-    .login-form .row {
-        margin-left: 0;
-        margin-right: 0;
-    }
-
+.login-form .row {
+  margin-left: 0;
+  margin-right: 0;
+}
