--- a/BlazorMovie/MovieClient/Pages/CreateStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/CreateStudio.razor
@@ -20,10 +20,7 @@
     <div>@content</div>
 *@
 
-<head>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossOrigin="anonymous" />
-</head>
+
 <div class="container">
     <form class="login-form" autocomplete="off" action="#">
         <EditForm Model="@movie" OnValidSubmit="@HandleValidSubmit">
@@ -40,10 +37,10 @@
             <input type="date" @bind="@movie.PremiereDate" />
             <button>Submit</button>
         </EditForm>
-        	@if (showAlert)
-{
-    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
-}
+        @if (showAlert)
+        {
+            <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center"
+            ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+        }
     </form>
 </div>
-
