--- a/BlazorMovie/MovieClient/Pages/Contact.razor
+++ b/BlazorMovie/MovieClient/Pages/Contact.razor
@@ -10,11 +10,7 @@
 
 <PageTitle>Contact Us</PageTitle>
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+
 
 <body>
   <div class="container">
@@ -59,10 +55,11 @@
           <div class="button">
             <input type="submit" value="Send Now">
           </div>
-          	@if (showAlert)
-{
-    <MudAlert Severity="Severity.Success" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
-}
+          @if (showAlert)
+          {
+            <MudAlert Severity="Severity.Success" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center"
+            ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+          }
 
         </EditForm>
       </div>
@@ -70,4 +67,3 @@
   </div>
 
 </body>
-
