--- a/BlazorMovie/MovieClient/Pages/DepositCustomer.razor
+++ b/BlazorMovie/MovieClient/Pages/DepositCustomer.razor
@@ -36,16 +36,6 @@
 
 
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="Favicon.png">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-</head>
 <body>
     <main class="login-form">
         <div class="cotainer">
@@ -59,7 +49,8 @@
                             <div class="card-header">
                                 <div class=row>
                                     <div class="col">Deposit</div>
-                                    <div class="col text-md-right"><span class="badge badge-success">If you cann't paypal, please turn your ad block off</span></div>
+                                    <div class="col text-md-right"><span class="badge badge-success">If you cann't
+                                            paypal, please turn your ad block off</span></div>
                                 </div>
                             </div>
                             <div class="card-body">
@@ -70,10 +61,11 @@
                                         <div class="form-group row">
                                             <label class="col-md-4 col-form-label text-md-right">Salary request</label>
                                             <div class="col-md-5">
-                                                <input type="number" step="0.01" min="0.01"  class="form-control" @bind="cash" />
+                                                <input type="number" step="0.01" min="0.01" class="form-control" @bind="cash" />
                                             </div>
                                             <div class="col-md-3">
-                                                <button @onclick="Cash" class="btn btn-primary" style="margin: 5px; height:38px; width: 88px">OK</button>
+                                                <button @onclick="Cash" class="btn btn-primary"
+                                            style="margin: 5px; height:38px; width: 88px">OK</button>
                                             </div>
                                         </div>
                                     }
@@ -88,12 +80,13 @@
                                         <input type="hidden" id="nonce" name="nonce" />
                                         <input type="hidden" id="cash" name="cash" />
                                     </form>
-                                    <div id="paypal-button" ></div>
+                                    <div id="paypal-button"></div>
                                 }
                                 else
                                 {
                                     <div class="col-md-3">@content</div>
-                                    <button @onclick="Recharge" class="btn btn-primary" style="margin: 5px; height:38px; width: 88px">Recharge</button>
+                                    <button @onclick="Recharge" class="btn btn-primary"
+                                    style="margin: 5px; height:38px; width: 88px">Recharge</button>
                                 }
 
                             </div>
@@ -121,7 +114,8 @@
                                         <input type="date" class="form-control">
                                     </div>
                                     <div class="col-md-3">
-                                        <button class="btn btn-primary" style="margin: 5px; height:38px; width: 88px">Check</button>
+                                        <button class="btn btn-primary"
+                                            style="margin: 5px; height:38px; width: 88px">Check</button>
                                     </div>
                                 </div>
                             </div>
@@ -132,8 +126,3 @@
         </div>
     </main>
 </body>
-
-
-
-
-
