--- a/BlazorMovie/MovieClient/Pages/Login.razor
+++ b/BlazorMovie/MovieClient/Pages/Login.razor
@@ -2,12 +2,6 @@
 @inject IAccountService _accountService;
 @page "/login"
 <PageTitle>MovieTV - Sign in or Register</PageTitle>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
 
 <body>
 
@@ -24,7 +18,7 @@
             </div>
             <div class="back">
                 <img class="backImg" src="https://bvuvolunteers.org/wp-content/uploads/2021/03/coffee-and-keyboard.jpg"
-                     alt="">
+                    alt="">
                 <div class="text">
                     <span class="text-1">Complete miles of journey <br> with one step</span>
                     <span class="text-2">Let's get started</span>
@@ -47,7 +41,7 @@
                                 <div class="input-box">
                                     <i class="fas fa-lock"></i>
                                     <input type="password" @bind="@login.Password" placeholder="Enter your password"
-                                           required>
+                                        required>
                                 </div>
                                 <div class="text"><a href="/ResetPassword">Forgot password?</a></div>
                                 <div class="button input-box">
@@ -72,7 +66,9 @@
                                 </div>
                                 @if (showAlert)
                                 {
-                                    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+                                    <MudAlert Severity="severity" Variant="Variant.Filled"
+                                    ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true"
+                                    CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
                                 }
                             </EditForm>
                         </div>
@@ -82,4 +78,3 @@
         </div>
     </div>
 </body>
-
