--- a/BlazorMovie/MovieClient/Pages/Profile.razor
+++ b/BlazorMovie/MovieClient/Pages/Profile.razor
@@ -5,15 +5,6 @@
 
 <PageTitle>Profile</PageTitle>
 
-<head>
-	<meta charset="utf-8">
-	<title>account setting or edit profile - Bootdey.com</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	@*<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>*@
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
-	@*<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>*@
-</head>
-
 <body>
 	<div class="container">
 		<div class="row gutters">
@@ -33,10 +24,12 @@
 								<h5>@accountManagementModel.Role</h5>
 								<p style="font-weight: 300">@accountManagementModel.Id</p>
 								<p>@accountManagementModel.Wallet</p>
-									@if (showAlert)
-{
-    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
-}
+								@if (showAlert)
+								{
+									<MudAlert Severity="severity" Variant="Variant.Filled"
+									ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true"
+									CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+								}
 
 							</div>
 						</div>
