--- a/BlazorMovie/MovieClient/Pages/ResetPassword.razor
+++ b/BlazorMovie/MovieClient/Pages/ResetPassword.razor
@@ -1,15 +1,7 @@
 ﻿@page "/ResetPassword"
 <PageTitle>Reset Password</PageTitle>
 
-<head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-</head>
 
-
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <div class="form-gap"></div>
 <div class="container">
 	<div class="row">
@@ -20,10 +12,12 @@
 						<h3><i class="fa fa-lock fa-4x"></i></h3>
 						<h2 class="text-center">Forgot Password?</h2>
 						<p>You can reset your password here.</p>
-							@if (showAlert)
-{
-    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
-}
+						@if (showAlert)
+						{
+							<MudAlert Severity="severity" Variant="Variant.Filled"
+							ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true"
+							CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+						}
 
 						<div class="panel-body">
 
@@ -51,6 +45,3 @@
 		</div>
 	</div>
 </div>
-
-
-
