--- a/BlazorMovie/MovieClient/Pages/SalaryStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/SalaryStudio.razor
@@ -5,9 +5,10 @@
 @attribute [Authorize(Roles = "Studio")]
 @using System.Text.RegularExpressions
 
-	@if (showAlert)
+@if (showAlert)
 {
-    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center"
+    ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
 }
 
 @*<div>Email</div>
@@ -27,19 +28,6 @@
     <button @onclick="Submit">Submit</button>*@
 
 @*<div>@content</div>*@
-
-
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="Favicon.png">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-</head>
 
 <body>
 
@@ -68,7 +56,8 @@
                                     <div class="form-group row">
                                         <label class="col-md-4 col-form-label text-md-right">Cash</label>
                                         <div class="col-md-8">
-                                            <input type="number" class="form-control" step="0.01" @bind="@Cash" required>
+                                            <input type="number" class="form-control" step="0.01" @bind="@Cash"
+                                                required>
                                         </div>
                                     </div>
                                     <div class="col-md-6 offset-md-4">
@@ -91,8 +80,3 @@
     </main>
 
 </body>
-
-
-
-
-
