--- a/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor
+++ b/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor
@@ -88,9 +88,7 @@
 						<div>Image Up</div>
 						<InputFile OnChange="OnChooseImageFile" />
 
-
-						<div>If your upload more 500MB click this button</div>
-                     <button type="submit" @onclick="@Upload">Upload</button>
+                     <button class="btn btn-primary" @onclick="@Upload">Click for upload more than 500MB</button>
 						
 						<div>@mp</div>
 						<div>@ip</div>
