--- a/BlazorMovie/MovieClient/Pages/Profile.razor
+++ b/BlazorMovie/MovieClient/Pages/Profile.razor
@@ -1,7 +1,7 @@
 ﻿<h3>Profile</h3>
 @attribute [Authorize]
 @page "/profile"
-@inject IAccountService _accountService;
+@inject AccountService _accountService;
 
 <PageTitle>Profile</PageTitle>
 
