--- a/BlazorMovie/MovieClient/Pages/EditMovieStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/EditMovieStudio.razor
@@ -58,7 +58,7 @@ if(more)
 <body>
 
 	<div class="container">
-		<input type="checkbox" id="flip">
+		
 		@if (movie == null)
 		{
 			<p>
@@ -135,12 +135,10 @@ if(more)
 						<div>Image Up</div>
 						<InputFile OnChange="OnChooseImageFile" />
 
-
-						<div>If your upload more 500MB click this button</div>
-                        <button class="btn btn-primary" type="submit" @onclick="@Upload">Upload</button>
+                        <button class="btn btn-primary" @onclick="@Upload">Click for upload more than 500MB</button>
 						
-						@*<div>@mp</div>
-						<div>@ip</div>*@
+						<div>@mp</div>
+						<div>@ip</div>
 					</div>
 				</div>
 			</div>
