--- a/BlazorMovie/MovieClient/Pages/Login.razor
+++ b/BlazorMovie/MovieClient/Pages/Login.razor
@@ -1,5 +1,5 @@
 ﻿@inject IJSRuntime JS
-@inject IAccountService _accountService;
+@inject AccountService _accountService;
 @page "/login"
 <PageTitle>MovieTV - Sign in or Register</PageTitle>
 
