--- a/BlazorMovie/MovieClient/Pages/AdminAccountManagement.razor
+++ b/BlazorMovie/MovieClient/Pages/AdminAccountManagement.razor
@@ -1,6 +1,11 @@
 ﻿@page "/AdminAccountManagement"
 @attribute [Authorize(Roles = "Admin")]
 <PageTitle>Admin - Account Management</PageTitle>
+<head>
+	<meta charset="UTF-8">
+	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
 <body>
 	<section class="home-section">
@@ -98,10 +103,7 @@
 								<li class="topic">ID</li>
 								@foreach (var acc in accs)
 								{
-									<li
-								style="overflow: hidden; text-overflow: ellipsis; max-width: 150px; margin-right: 10px;">
-										<a href="#">@acc.Id</a>
-									</li>
+									<li style="overflow: hidden; text-overflow: ellipsis; max-width: 150px; margin-right: 10px;"><a href="#">@acc.Id</a></li>
 								}
 
 							</ul>
@@ -109,50 +111,35 @@
 								<li class="topic"><i class='bx bx-mail-send'></i> Email</li>
 								@foreach (var acc in accs)
 								{
-									<li
-								style="overflow: hidden; text-overflow: ellipsis; max-width: 200px; margin-right: 10px;">
-										<a href="#">@acc.Email</a>
-									</li>
+									<li style="overflow: hidden; text-overflow: ellipsis; max-width: 200px; margin-right: 10px;"><a href="#">@acc.Email</a></li>
 								}
 							</ul>
 							<ul class="details">
 								<li class="topic"><i class='bx bx-user'></i> Name</li>
 								@foreach (var acc in accs)
 								{
-									<li
-								style="overflow: hidden; text-overflow: ellipsis; max-width: 200px; margin-right: 10px;">
-										<a href="#">@acc.Name</a>
-									</li>
+									<li style="overflow: hidden; text-overflow: ellipsis; max-width: 200px; margin-right: 10px;"><a href="#">@acc.Name</a></li>
 								}
 							</ul>
 							<ul class="details">
 								<li class="topic"><i class='bx bx-network-chart'></i> Role</li>
 								@foreach (var acc in accs)
 								{
-									<li
-								style="overflow: hidden; text-overflow: ellipsis; max-width: 100px; margin-right: 10px;">
-										<a href="#">@acc.Role</a>
-									</li>
+									<li style="overflow: hidden; text-overflow: ellipsis; max-width: 100px; margin-right: 10px;"><a href="#">@acc.Role</a></li>
 								}
 							</ul>
 							<ul class="details">
 								<li class="topic"><i class='bx bx-calendar'></i> DOB</li>
 								@foreach (var acc in accs)
 								{
-									<li
-								style="overflow: hidden; text-overflow: ellipsis; max-width: 150px; margin-right: 10px;">
-										<a href="#">@acc.DateOfBirth.ToShortDateString()</a>
-									</li>
+									<li style="overflow: hidden; text-overflow: ellipsis; max-width: 150px; margin-right: 10px;"><a href="#">@acc.DateOfBirth.ToShortDateString()</a></li>
 								}
 							</ul>
 							<ul class="details">
 								<li class="topic"><i class='bx bx-wallet'></i> Wallet</li>
 								@foreach (var acc in accs)
 								{
-									<li
-								style="overflow: hidden; text-overflow: ellipsis; max-width: 150px; margin-right: 10px;">
-										<a href="#">@acc.Wallet</a>
-									</li>
+									<li style="overflow: hidden; text-overflow: ellipsis; max-width: 150px; margin-right: 10px;"><a href="#">@acc.Wallet</a></li>
 								}
 
 							</ul>
@@ -184,3 +171,7 @@
 	</section>
 
 </body>
+
+
+
+
