--- a/BlazorMovie/MovieClient/Pages/BuyVip.razor
+++ b/BlazorMovie/MovieClient/Pages/BuyVip.razor
@@ -4,56 +4,66 @@
 @page "/BuyVip/{movieId}"
 @attribute [Authorize(Roles = "Customer")]
 <PageTitle>VIP package</PageTitle>
-@* @if (showAlert)
-    {
-    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center"
-    ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
-    }
-    <EditForm Model="@vip" OnValidSubmit="@Buy">
+@*	@if (showAlert)
+{
+    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+}
+<EditForm Model="@vip" OnValidSubmit="@Buy">
     <DataAnnotationsValidator />
     <ValidationSummary />
     <InputRadioGroup @bind-Value="@vip.Choose">
-    @if (movieId != null)
-    {
-    <InputRadio Value="0" />
-    <div>Only this movie</div>
+        @if (movieId != null)
+        {
+            <InputRadio Value="0" />
+            <div>Only this movie</div>
 
-    <br />
-    }
-    <InputRadio checker Value="1" />
-    <div>1 month </div><br />
-    <InputRadio Value="3" />
-    <div>3 month</div> <br />
-    <InputRadio Value="6" />
-    <div>6 month</div> <br />
-    <InputRadio Value="12" />
-    <div>12 month</div> <br />
+            <br />
+        }
+        <InputRadio checker Value="1" />
+        <div>1 month </div><br />
+        <InputRadio Value="3" />
+        <div>3 month</div> <br />
+        <InputRadio Value="6" />
+        <div>6 month</div> <br />
+        <InputRadio Value="12" />
+        <div>12 month</div> <br />
     </InputRadioGroup>
     <button type="submit">Buy</button>
-    </EditForm>
+</EditForm>
 
 
 
-    <div>@content</div>
+<div>@content</div>
 
-    <div>You are Choosing @vip.Choose</div>
+<div>You are Choosing @vip.Choose</div>
 
-    @if (content == "Success" && movieId != null)
-    {
+@if (content == "Success" && movieId != null)
+{
     string linkWatch = $"WatchCustomer/{movieId}";
     <div>
-    <NavLink class="nav-link" href="@linkWatch">Watch</NavLink>
+        <NavLink class="nav-link" href="@linkWatch">Watch</NavLink>
     </div>
-    }
-    @if (vipStatus == null)
-    {
+}
+@if (vipStatus == null)
+{
     <div>Loadding</div>
-    }
-    else
-    {
+}
+else
+{
     <div>@vipStatus</div>
-    }*@
+}*@
 
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="Favicon.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+</head>
 <body>
     <main class="login-form">
         <div class="cotainer">
@@ -77,8 +87,7 @@
                                     }
                                     else
                                     {
-                                        <div class="col text-md-right">Your VIP time: <span
-                                            class="badge badge-danger">@vipStatus</span></div>
+                                        <div class="col text-md-right">Your VIP time: <span class="badge badge-danger">@vipStatus</span></div>
                                     }
                                 </div>
                             </div>
@@ -90,26 +99,16 @@
                                         <div class="row" style="margin:5px">
                                             @if (movieId != null)
                                             {
-                                                <div class="col-sm">Only this movie
-                                                    <InputRadio Value="0" />
-                                                </div>
+                                                <div class="col-sm">Only this movie <InputRadio Value="0" /></div>
                                             }
 
-                                            <div class="col-sm">1 month
-                                                <InputRadio checker Value="1" />
-                                            </div>
+                                            <div class="col-sm">1 month <InputRadio checker Value="1" /> </div>
 
-                                            <div class="col-sm">3 month
-                                                <InputRadio Value="3" />
-                                            </div>
+                                            <div class="col-sm">3 month <InputRadio Value="3" /></div>
 
-                                            <div class="col-sm">6 month
-                                                <InputRadio Value="6" />
-                                            </div>
+                                            <div class="col-sm">6 month <InputRadio Value="6" /></div>
 
-                                            <div class="col-sm">12 month
-                                                <InputRadio Value="12" />
-                                            </div>
+                                            <div class="col-sm">12 month <InputRadio Value="12" /></div>
                                         </div>
                                         <div class="row">
                                             <div class="col-md align-self-center" style="margin:5px">
@@ -117,16 +116,13 @@
                                                     Submit
                                                 </button>
                                             </div>
-                                            <div class="col-md align-self-center font-weight-bold text-md-right"
-                                                style="margin:5px">You are Choosing @vip.Choose</div>
+                                            <div class="col-md align-self-center font-weight-bold text-md-right" style="margin:5px">You are Choosing @vip.Choose</div>
                                         </div>
                                         <div class="row">
                                             <div class="col-md" style="margin:5px">
                                                 @if (showAlert)
                                                 {
-                                                    <MudAlert Severity="severity" Variant="Variant.Filled"
-                                                    ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true"
-                                                    CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+                                                    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
                                                 }
                                             </div>
                                         </div>
@@ -154,8 +150,7 @@
                                         <input type="date" class="form-control">
                                     </div>
                                     <div class="col-md-3">
-                                        <button class="btn btn-primary"
-                                            style="margin: 5px; height:38px; width: 88px">Check</button>
+                                        <button class="btn btn-primary" style="margin: 5px; height:38px; width: 88px">Check</button>
                                     </div>
                                 </div>
                             </div>
