--- a/BlazorMovie/MovieClient/Pages/DeleteMovieAdmin.razor
+++ b/BlazorMovie/MovieClient/Pages/DeleteMovieAdmin.razor
@@ -3,6 +3,14 @@
 @attribute [Authorize(Roles ="Admin")]
 <PageTitle>Admin - Delete Movie</PageTitle>
 
+<head>
+    <meta charset="utf-8">
+    <title>Studio Delete Movie</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.1/dist/js/bootstrap.bundle.min.js"></script> -->
+</head>
 <body>
     <div class="container h-100">
         <div class="row h-100">
