--- a/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor
+++ b/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor
@@ -5,6 +5,12 @@
 @using Firebase.Storage
 @attribute [Authorize(Roles ="Admin")]
 
+<head>
+	<meta charset="UTF-8">
+	<!-- Fontawesome CDN Link -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body>
     @if (showAlert)
 {
@@ -88,7 +94,9 @@
 						<div>Image Up</div>
 						<InputFile OnChange="OnChooseImageFile" />
 
-                     <button class="btn btn-primary" @onclick="@Upload">Click for upload more than 500MB</button>
+
+						<div>If your upload more 500MB click this button</div>
+                     <button type="submit" @onclick="@Upload">Upload</button>
 						
 						<div>@mp</div>
 						<div>@ip</div>
