--- a/BlazorMovie/MovieClient/Pages/EditMovieStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/EditMovieStudio.razor
@@ -55,10 +55,16 @@ if(more)
 }*@
 
 
+<head>
+	<meta charset="UTF-8">
+	<!-- Fontawesome CDN Link -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body>
 
 	<div class="container">
-		
+		<input type="checkbox" id="flip">
 		@if (movie == null)
 		{
 			<p>
@@ -135,10 +141,12 @@ if(more)
 						<div>Image Up</div>
 						<InputFile OnChange="OnChooseImageFile" />
 
-                        <button class="btn btn-primary" @onclick="@Upload">Click for upload more than 500MB</button>
+
+						<div>If your upload more 500MB click this button</div>
+                        <button class="btn btn-primary" type="submit" @onclick="@Upload">Upload</button>
 						
-						<div>@mp</div>
-						<div>@ip</div>
+						@*<div>@mp</div>
+						<div>@ip</div>*@
 					</div>
 				</div>
 			</div>
