--- a/BlazorMovie/MovieClient/Pages/Home.razor
+++ b/BlazorMovie/MovieClient/Pages/Home.razor
@@ -1,21 +1,27 @@
 ﻿@page "/home"
 @page "/"
 @using Firebase.Storage
+@inject HttpClient Http
+
 
 <PageTitle>MovieTV</PageTitle>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    @*<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>*@
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    @*<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>*@
+</head>
 <body>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
-                <h1 class="mb-4 text-center animate" data-toggle="animation" data-animation="fadeUp"
-                    data-animation-order="1" data-animation-trigger="load">
+                <h1 class="mb-4 text-center animate" data-toggle="animation" data-animation="fadeUp" data-animation-order="1" data-animation-trigger="load">
                     NOMINATION MOVIES
                 </h1>
-                <p class="mb-6 text-center text-muted animate" data-toggle="animation" data-animation="fadeUp"
-                    data-animation-order="2" data-animation-trigger="load">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas harum aperiam minus
-                    corporis, nesciunt nobis quaerat voluptatumunt qui similique.
+                <p class="mb-6 text-center text-muted animate" data-toggle="animation" data-animation="fadeUp" data-animation-order="2" data-animation-trigger="load">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas harum aperiam minus corporis, nesciunt nobis quaerat voluptatumunt qui similique.
                 </p>
 
             </div>
