--- a/BlazorMovie/MovieClient/Pages/EditMovieStudio.razor.css
+++ b/BlazorMovie/MovieClient/Pages/EditMovieStudio.razor.css
@@ -25,6 +25,10 @@ body {
   border-radius: 12px;
   /*left: 50%;*/
 }
+    .container .iframe {
+        height: 480px;
+    }
+
 
 .container .forms {
   height: 100%;
