--- a/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor.css
+++ b/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor.css
@@ -26,6 +26,10 @@ body {
   /*left: 50%;*/
 }
 
+    .container .iframe {
+        height: 480px;
+    }
+
 .container .forms {
   height: 100%;
   width: 100%;
