--- a/BlazorMovie/MovieClient/Pages/MovieAdmin.razor
+++ b/BlazorMovie/MovieClient/Pages/MovieAdmin.razor
@@ -3,182 +3,133 @@
 <PageTitle>Admin - Movie Management</PageTitle>
 
 <head>
-	<meta charset="UTF-8">
-	<!-- Boxicons CDN Link -->
-	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <!-- Boxicons CDN Link -->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-	<section class="home-section">
-		<nav>
-			<div class="sidebar-button">
-				<span class="dashboard">Dashboard</span>
-			</div>
-			<div class="search-box" style="margin-right:20%">
-				<input type="text" placeholder="Search..." @bind="@searchString">
-				<i class='bx bx-search' @onclick="Search"></i>
-			</div>
-			@*<div></div><div></div>*@
-		</nav>
-		<div class="home-content">
-			<div class="overview-boxes">
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Total Order</div>
-						<div class="number">40,876</div>
-						<div class="indicator">
-							<i class='bx bx-up-arrow-alt'></i>
-							<span class="text">Up from yesterday</span>
-						</div>
-					</div>
-					<i class='bx bx-cart-alt cart'></i>
-				</div>
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Total Sales</div>
-						<div class="number">38,876</div>
-						<div class="indicator">
-							<i class='bx bx-up-arrow-alt'></i>
-							<span class="text">Up from yesterday</span>
-						</div>
-					</div>
-					<i class='bx bxs-cart-add cart two'></i>
-				</div>
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Total Profit</div>
-						<div class="number">$12,876</div>
-						<div class="indicator">
-							<i class='bx bx-up-arrow-alt'></i>
-							<span class="text">Up from yesterday</span>
-						</div>
-					</div>
-					<i class='bx bx-cart cart three'></i>
-				</div>
-				<div class="box">
-					<div class="right-side">
-						<div class="box-topic">Total Return</div>
-						<div class="number">11,086</div>
-						<div class="indicator">
-							<i class='bx bx-down-arrow-alt down'></i>
-							<span class="text">Down From Today</span>
-						</div>
-					</div>
-					<i class='bx bxs-cart-download cart four'></i>
-				</div>
-			</div>
-		</div>
-		@if (movies == null)
-		{
-			<p>
-				<em>Loading...</em>
-			</p>
-		}
-		else
-		{
-			<div class="home-content">
-				<div class="sales-boxes">
-					<div class="recent-sales box">
-						<div class="title">Movie manager</div>
-						<div class="sales-details">
-							<ul class="details">
-								<div class="button" style="margin:10px" @onclick="NameSortParm">
-									<a style="cursor: pointer;">Sort by Name</a>
-								</div>
-							</ul>
-							<ul class="details">
-								<div class="button" style="margin:10px" @onclick="GenreSortParm">
-									<a style="cursor: pointer;">Sort by Genre</a>
-								</div>
-							</ul>
-							<ul class="details">
-								<div class="button" style="margin:10px" @onclick="DateSortParm">
-									<a style="cursor: pointer;">Sort by Premiere Date</a>
-								</div>
-							</ul>
-						</div>
+    <section class="home-section">
+        <nav>
+            <div class="sidebar-button">
+                <span class="dashboard">Dashboard</span>
+            </div>
+            <div class="search-box" style="margin-right:20%">
+                <input type="text" placeholder="Search..." @bind="@searchString">
+                <i class='bx bx-search' @onclick="Search"></i>
+            </div>
+            @*<div></div><div></div>*@
+        </nav>
+        <div class="home-content">
+            <div class="overview-boxes">
+            </div>
+        </div>
+        @if (movies == null)
+        {
+            <p>
+                <em>Loading...</em>
+            </p>
+        }
+        else
+        {
+            <div class="home-content">
+                <div class="sales-boxes">
+                    <div class="recent-sales box">
+                        <div class="title">Movie manager</div>
+                        <div class="sales-details">
+                            <ul class="details">
+                                <div class="button" style="margin:10px" @onclick="NameSortParm">
+                                    <a style="cursor: pointer;">Sort by Name</a>
+                                </div>
+                            </ul>
+                            <ul class="details">
+                                <div class="button" style="margin:10px" @onclick="GenreSortParm">
+                                    <a style="cursor: pointer;">Sort by Genre</a>
+                                </div>
+                            </ul>
+                            <ul class="details">
+                                <div class="button" style="margin:10px" @onclick="DateSortParm">
+                                    <a style="cursor: pointer;">Sort by Premiere Date</a>
+                                </div>
+                            </ul>
+                        </div>
 
 
-						<div class="sales-details">
-							<ul class="details">
-								<li class="topic">Movie ID</li>
-								@foreach (var item in movies)
-								{
-									<li
-								style="overflow: hidden; text-overflow: ellipsis; max-width: 150px; margin-right: 10px;">
-										<a href="#">@item.MovieId</a>
-									</li>
-								}
+                        <div class="sales-details">
+                            <ul class="details">
+                                <li class="topic">Movie ID</li>
+                                @foreach (var item in movies)
+                                {
+                                    <li style="overflow: hidden; text-overflow: ellipsis; max-width: 150px; margin-right: 10px;">
+                                        <a>@item.MovieId</a>
+                                    </li>
+                                }
 
-							</ul>
-							<ul class="details">
-								<li class="topic"><i class='bx bx-mail-send'></i> Studio ID</li>
-								@foreach (var item in movies)
-								{
-									<li
-								style="overflow: hidden; text-overflow: ellipsis; max-width: 200px; margin-right: 10px;">
-										<a href="#">@item.StudioId</a>
-									</li>
-								}
-							</ul>
-							<ul class="details">
-								<li class="topic"><i class='bx bx-user'></i> Genre</li>
-								@foreach (var item in movies)
-								{
-									<li
-								style="overflow: hidden; text-overflow: ellipsis; max-width: 200px; margin-right: 10px;">
-										<a href="#">@item.MovieGenre</a>
-									</li>
-								}
-							</ul>
-							<ul class="details">
-								<li class="topic"><i class='bx bx-network-chart'></i> Name</li>
-								@foreach (var item in movies)
-								{
-									<li
-								style="overflow: hidden; text-overflow: ellipsis; max-width: 200px; margin-right: 10px;">
-										<a href="#">@item.MovieName</a>
-									</li>
-								}
-							</ul>
-							<ul class="details">
-								<li class="topic"><i class='bx bx-calendar'></i> Premiere Date</li>
-								@foreach (var item in movies)
-								{
-									<li
-								style="overflow: hidden; text-overflow: ellipsis; max-width: 150px; margin-right: 10px;">
-										<a href="#">@item.PremiereDate.ToShortDateString()</a>
-									</li>
-								}
-							</ul>
-							<ul class="details">
-								<li class="topic"><i class='bx bxs-traffic-cone'></i> Action</li>
-								@foreach (var item in movies)
-								{
-									<li>
-										@{
-											var linkEdit = $"EditMovieAdmin/{item.MovieId}"; var linkBan =
-					$"DeleteMovieAdmin/{item.MovieId}";
-										}
-										<div class="button">
-											<a href="@linkEdit" style="margin-right:5px">Edit</a>
-											<a href="@linkBan" style="margin-left:5px">Delete</a>
-										</div>
-									</li>
-								}
-							</ul>
-						</div>
-						<div class="button" style="margin:10px" @onclick="LoadMore">
-							<a style="cursor: pointer;">Load More</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		}
-		@* Here is end else*@
+                            </ul>
+                            <ul class="details">
+                                <li class="topic"><i class='bx bx-mail-send'></i> Studio ID</li>
+                                @foreach (var item in movies)
+                                {
+                                    <li style="overflow: hidden; text-overflow: ellipsis; max-width: 150px; margin-right: 10px;">
+                                        <a>@item.StudioId</a>
+                                    </li>
+                                }
+                            </ul>
+                            <ul class="details">
+                                <li class="topic"><i class='bx bx-user'></i> Genre</li>
+                                @foreach (var item in movies)
+                                {
+                                    <li style="overflow: hidden; text-overflow: ellipsis; width: 200px; margin-right: 10px;">
+                                        <a>@item.MovieGenre</a>
+                                    </li>
+                                }
+                            </ul>
+                            <ul class="details">
+                                <li class="topic"><i class='bx bx-network-chart'></i> Name</li>
+                                @foreach (var item in movies)
+                                {
+                                    <li style="overflow: hidden; text-overflow: ellipsis;white-space: nowrap; max-width: 300px; margin-right: 10px;">
+                                        <a>@item.MovieName</a>
+                                    </li>
+                                }
+                            </ul>
+                            <ul class="details">
+                                <li class="topic"><i class='bx bx-calendar'></i> Premiere Date</li>
+                                @foreach (var item in movies)
+                                {
+                                    <li style="overflow: hidden; text-overflow: ellipsis; max-width: 150px; margin-right: 10px;">
+                                        <a>@item.PremiereDate.ToShortDateString()</a>
+                                    </li>
+                                }
+                            </ul>
+                            <ul class="details">
+                                <li class="topic"><i class='bx bxs-traffic-cone'></i> Action</li>
+                                @foreach (var item in movies)
+                                {
+                                    <li>
+                                        @{
+                                            var linkEdit = $"EditMovieAdmin/{item.MovieId}"; var linkBan =
+                    $"DeleteMovieAdmin/{item.MovieId}";
+                                        }
+                                        <div class="button">
+                                            <a href="@linkEdit" style="margin-right:5px">Edit</a>
+                                            <a href="@linkBan" style="margin-left:5px">Delete</a>
+                                        </div>
+                                    </li>
+                                }
+                            </ul>
+                        </div>
+                        <div class="button" style="margin:10px" @onclick="LoadMore">
+                            <a style="cursor: pointer;">Load More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+        @* Here is end else*@
 
-	</section>
+    </section>
 
 </body>
 
